# vest

./: .gitignore  LICENSE  README.md
docs/: crates.js  (+3 more)
verdict-parser/: Cargo.toml
verdict-parser/src/: lib.rs
verdict-parser/src/asn1/: base128.rs  big_int.rs  bit_string.rs  boolean.rs  bounds.rs  explicit.rs  gen_time.rs  ia5_string.rs  implicit.rs  integer.rs  len.rs  len_wrapped.rs  null.rs  octet_string.rs  oid.rs  printable_string.rs  seq_of.rs  tag.rs  utc_time.rs  utf8_string.rs  var_int.rs
verdict-parser/src/common/: base64.rs  cached.rs  clone.rs  default.rs  depend.rs  end.rs  eq.rs  mapper.rs  mod.rs  option_deep.rs  optional.rs  pair.rs  repeat.rs  unreachable.rs  vec_deep.rs  vest.rs  wrapped.rs
vest/: .gitignore  Cargo.toml  Makefile  doc.sh
vest++/: .gitignore  Cargo.toml  README.md  doc.sh  notes.md
vest++/src/: base128.rs  ikev2.vest  leb128.rs  lib.rs  macros.rs  v0.rs
vest++/src/asn1/: base256.rs  bitstring.rs  bool.rs  boolean.rs  integer.rs  length.rs  mod.rs
vest++/src/combinators/: disjoint.rs  length.rs  mod.rs
vest++/src/core/: fns.rs  mod.rs  proof.rs  spec.rs  types.rs
vest++/src/primitives/: btcvarint.rs  leb128.rs  mod.rs
vest++/src/spec_tests/: choice.rs  fix.rs  implicit.rs  malleable.rs  mapped.rs  mod.rs  opt.rs  recursive.rs  refined.rs  value_len.rs
vest++/src/tests/: choice.rs  dependent.rs  disjoint.rs  fix.rs  implicit.rs  malleable.rs  mapped.rs  mod.rs  opt.rs  recursive.rs  star.rs  static_len.rs  tail.rs  unambuguity.rs
vest-dsl/: .gitignore  Cargo.toml  vest.vim
vest-dsl/bitcoin/: Cargo.toml
vest-dsl/bitcoin/benches/: bitcoin_benchmark.rs
vest-dsl/bitcoin/src/: bitcoin.rfc  bitcoin.rs  bitcoin.vest  lib.rs  main.rs  transaction_data.rs  vest_bitcoin.rs
vest-dsl/mavlink/: Cargo.toml
vest-dsl/mavlink/src/: lib.rs  mavlink.vest  vest_mavlink.rs
vest-dsl/src/: ast.rs  codegen.rs  elab.rs  lib.rs  main.rs  type_check.rs  utils.rs  vest.pest  vestir.rs
vest-dsl/src/codegen_v2/: builders.rs  combir.rs  format.rs  lower.rs  mod.rs  nominal.rs  output.rs
vest-dsl/src/codegen_v3/: analysis.rs  helper_specs.rs  ir.rs  lower.rs  mod.rs  names.rs  rust_format.rs
vest-dsl/test/: .nvim_backup.lua  Cargo.toml  Makefile  test_fmt_nested.py
vest-dsl/test/bad/: array_len_type.vest  array_len_type2.vest  array_len_unbound.vest  bind_invalid_format.vest  byte_array_len_type.vest  byte_array_len_type2.vest  byte_array_len_unbound.vest  choice_arrays_folded_len_mismatch.vest  choice_arrays_invalid_len.vest  choice_arrays_invalid_len2.vest  choice_arrays_type_mismatch.vest  choice_arrays_unbound.vest  choice_arrays_variant_duplicate.vest  choice_arrays_variant_duplicate1.vest  choice_arrays_variant_invalid_len.vest  choice_arrays_variant_invalid_len2.vest  choice_arrays_variant_invalid_len3.vest  choice_enum_type_mismatch.vest  choice_enum_unbound.vest  choice_enum_undefined.vest  choice_enum_variant_duplicate.vest  choice_enum_variant_duplicate2.vest  choice_enum_variant_nonexhaustive.vest  choice_enum_variant_undefined.vest  choice_enum_wildcard.vest  choice_ints_type_mismatch.vest  choice_ints_type_mismatch2.vest  choice_ints_unbound.vest  choice_ints_undefined.vest  choice_ints_variant_overlap.vest  choice_ints_variant_overlap2.vest  choice_ints_variant_overlap3.vest  choice_non_dependent.vest  choice_non_dependent_tag2.vest  const_array_len_mismatch.vest  const_array_len_mismatch2.vest  const_array_type_mismatch.vest  const_byte_array_len_mismatch.vest  const_byte_array_len_mismatch2.vest  const_byte_array_len_mismatch3.vest  (+28 more)
vest-dsl/test/src/: anonymous_nested.rs  anonymous_nested.vest  basics.vest  bitcoin.vest  codegen.rs  codegen.vest  dns.vest  elab.rs  elab.vest  enum1.vest  enum_constraints.rs  enum_constraints.vest  enums.rs  enums.vest  ikev2.rs  ikev2.vest  josh.rs  josh.vest  josh_backup.rs  josh_choice.rs  length_expr.rs  length_expr.vest  lib.rs  main.rs  matches.rs  matches.vest  nested_access.rs  nested_access.vest  opt.rs  opt.vest  repeat.rs  repeat.vest  struct.rs  struct.vest  test.rs  test.vest  tls.rs  tls.vest  tls13_extracted.txt  tlv1.vest  (+3 more)
vest-dsl/tests/: codegen_v2.rs  codegen_v3.rs  generated_rust.rs
vest-dsl/tests/emitted/: combined.rs  combined_old.rs  mod.rs  tlv.rs  tlv_old.rs
vest-dsl/tests/vest_files/: combined.rs  combined.vest  single_field.vest  tlv.rs  tlv.vest
vest-dsl/tls/: Cargo.toml  Makefile  parse.output
vest-dsl/tls/benches/: tls_benchmark.rs
vest-dsl/tls/src/: hex_split.py  lib.rs  main.rs  mitls_parsers.rfc  tls.vest  tls_combinators.rs  to_comma_hex.py  tranco_handshakes.rs
vest-dsl/wasm/: Cargo.toml
vest-dsl/wasm/benches/: wasm_benchmark.rs
vest-dsl/wasm/src/: lib.rs  main.rs  vest_wasm.rs  wasm.rfc  wasm.vest
vest-examples/: Cargo.toml  Makefile  README.md  lib.long-type-10914137719741610887.txt
vest-examples/.zed/: settings.json
vest-examples/asn1/: Cargo.toml
vest-examples/asn1-macros/: Cargo.toml
vest-examples/bitcoin_dsl/: Cargo.toml  build.rs
vest-examples/bitcoin_dsl/benches/: bitcoin_benchmark.rs
vest-examples/bitcoin_dsl/src/: lib.rs
vest-examples/choice/: Cargo.toml
vest-examples/choice/src/: lib.rs
vest-examples/depend/: Cargo.toml
vest-examples/depend/src/: lib.rs
vest-examples/enums/: Cargo.toml
vest-examples/enums/src/: lib.rs
vest-examples/map/: Cargo.toml
vest-examples/map/src/: lib.rs
vest-examples/mavlink_dsl/: Cargo.toml  build.rs
vest-examples/opt/: Cargo.toml
vest-examples/pair/: Cargo.toml
vest-examples/refserializer/: Cargo.toml
vest-examples/repeat/: Cargo.toml
vest-examples/src/: choice.rs  depend.rs  dependent.rs  enums.rs  lib.rs  main.rs  map.rs  opt.rs  pair.rs  refserializer.rs  repeat.rs  secret_examples.rs  tlv.rs  wireguard.rs
vest-examples/tls_dsl/: Cargo.toml  build.rs
vest-examples/triple/: Cargo.toml  build.rs
vest-examples/triple_dsl/: Cargo.toml
vest-examples/wireguard/: Cargo.toml
vest/examples/: combined.rs  tlv.rs
vest/src/: buf_traits.rs  errors.rs  infallible.rs  lib.md  lib.rs  properties.rs  utils.rs
vest_dev/: Cargo.toml
vest_dev/src/: lib.rs
(+632 files in other folders)
