[package]
name = "verdict-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = "=0.0.0-2026-01-11-0057"
vest_lib = { path = "../vest/" }
verdict-macros = { path = "../verdict-macros" }
paste = "1.0.15"

[dev-dependencies]
der = { version = "0.7.9", features = [ "alloc", "oid" ] }
base64 = "0.22.1"

[features]
default = []
trace = []

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"
