[package]
name = "vest_lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc", "vstd/std"]
alloc = ["vstd/alloc"]

[dependencies]
vstd = "0.0.0-2026-04-20-1748"

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors -V new-mut-ref"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(verus_only)"] }
