[package]
name = "vest_lib2"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc", "vstd/std"]
alloc = ["vstd/alloc"]

[dependencies]
vstd = "=0.0.0-2026-05-10-0145"

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(verus_only)"] }
