[package]
name = "vest-dsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest="2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
itertools = "0.11.0"
clap = { version = "4.4.7", features = ["derive"] }
paste = "1.0.14"
