[workspace]
members = [
  "bitcoin_dsl",
  "choice",
  "depend",
  "enums",
  "map",
  "opt",
  "pair",
  "refserializer",
  "repeat",
  "tls_dsl",
  "triple_dsl",
  "mavlink_dsl",
  "wireguard",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
vstd = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin = { git = "https://github.com/verus-lang/verus", branch = "main" }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus", branch = "main" }
vest_lib = { path = "../vest" }

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1
