[package]
name = "mavlink"
version = "0.1.0"
edition = "2021"

[dependencies]
# vstd = "=0.0.0-2025-08-12-1837"
# verus_builtin = "0.0.0-2025-08-12-1837"
# verus_builtin_macros = "0.0.0-2025-08-12-1837"
# vest_lib = { path = "../../vest" }

vest_lib = "0.0.0-2025-11-17-1130"
vstd = "=0.0.0-2025-11-16-0050"

[package.metadata.verus]
verify = true
