[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
verus_builtin = "0.0.0-2025-08-12-1837"
verus_builtin_macros = "0.0.0-2025-08-12-1837"
vstd = "=0.0.0-2025-08-12-1837"
vest = { path = "../../vest" }

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"
