[package]
name = "bitcoin_dsl"
version.workspace = true
edition.workspace = true

[dependencies]
vstd.workspace = true
verus_builtin.workspace = true
verus_builtin_macros.workspace = true
vest_lib.workspace = true

hex = "0.4.3"
bitcoin = "0.32.5"
base64 = "0.22.1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
vstd.workspace = true

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bitcoin_benchmark"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.bench]
lto = "fat"
opt-level = 3
codegen-units = 1
