[package]
name = "triple-example"
version.workspace = true
edition.workspace = true

[dependencies]
vstd.workspace = true
verus_builtin.workspace = true
verus_builtin_macros.workspace = true
vest_lib.workspace = true

[build-dependencies]
vstd.workspace = true

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"

[[bin]]
name = "triple-example"
path = "src/main.rs"
