[package]
name = "triple_dsl"
version.workspace = true
edition.workspace = true

[dependencies]
vstd.workspace = true
vest_lib.workspace = true

[build-dependencies]
vstd.workspace = true

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"

[[bin]]
name = "triple_dsl"
path = "src/main.rs"
